--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,7 +1,5 @@
 .navbar {
-  position: fixed;
-  top: 34px;
-  left: 0;
+  position: relative;
   width: 100%;
   height: 80px;
   z-index: 1000;
@@ -146,7 +144,6 @@
 
   .navbar { 
     height: 60px; 
-    top: 30px; /* Ajuste para banner móvil */
   }
   .navbar__logo-img { height: 42px; }
   .navbar__logo-text { font-size: 1rem; }
